# adh-rs

./: .gitignore  Cargo.toml  Readme.md  index.html
src/: audio_bridge.rs  chunk.rs  generator.rs  lib.rs  misc.rs  protocol.rs  samples.rs  slots.rs  socket.rs  tray_icon.rs
systemd/: adhdaemon.service  adhdaemon.socket
