[package]
name = "adh-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
assert_no_alloc = "1.1.2"
bincode = "1.3.3"
cpal = "0.15.2"
daemonize = "0.5.0"
fork = "0.1.21"
fundsp = "0.13.0"
gtk = "^0.16"
lazy_static = "1.4.0"
libappindicator = "0.8.0"
#iced_native = "0.10.3"
#iced = { version = "0.9.0", features = [ "canvas" ] }
rand = { version = "0.8.5", features = [ "small_rng" ] }
rustdct = "0.7.1"
serde = { version = "1.0.160", features = [ "derive" ] }
serde_json = "1.0.96"
systemd = "0.10.0"
#winit = "0.28"
xdg = "2.5.0"

[dependencies.iced]
path = "../iced"
#git = "https://github.com/addap/iced.git"
features = [ "canvas" ]

[dependencies.iced_runtime]
path = "../iced/runtime"
#git = "https://github.com/addap/iced.git"

[dependencies.winit]
version = "0.28"
git = "https://github.com/iced-rs/winit.git"
rev = "c52db2045d0a2f1b8d9923870de1d4ab1994146e"
features = [ "x11" ]
default-features = false

#[dependencies.plotters]
#git = "https://github.com/plotters-rs/plotters.git"


