[package]
name = "adh-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = [ "serde" ] }
cpal = "0.16"
#gtk4 = "0.9"
lazy_static = "1.5"
lerp = "0.5"
#libappindicator = "0.9"
rand = { version = "0.9", features = [ "small_rng" ] }
rustdct = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
systemd = "0.10"
xdg = "3.0"

[dependencies.iced]
#path = "../iced"
#git = "https://github.com/addap/iced.git"
version = "0.13"
features = [ "canvas" ]

[dependencies.iced_runtime]
#path = "../iced/runtime"
version = "0.13"
#git = "https://github.com/addap/iced.git"

[dependencies.winit]
version = "0.30"
#git = "https://github.com/iced-rs/winit.git"
#rev = "c52db2045d0a2f1b8d9923870de1d4ab1994146e"
